--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FRANKLIN</title>
+    <title>Design your Tattoo</title>
     <!-- <link rel="icon" href="app/view/img/logo.png" type="image/x-icon"> -->
-    <link rel="stylesheet" href="app/styles/css/main.css"/>
     <link rel="stylesheet" href="app/styles/css/normalize.css"/>
+    <link rel="stylesheet" href="app/styles/css/fontStyle.css"/>
+    <link rel="stylesheet" href="app/styles/css/main.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.5.3/signature_pad.js"></script>
   </head>
   <body>
@@ -15,7 +16,7 @@
         <!-- tool bar -->
         <div class="creationPanel-toolbar">
           <div class="creationPanel-toolbar-item creationPanel-toolbar-skincolor" id="toolbarSkincolor" style="background-color: rgb(0, 0, 0)">Skin</div>
-          <div class="creationPanel-toolbar-item creationPanel-toolbar-font" id="toolbarFont" style="font-family:serif">Font</div>
+          <div class="creationPanel-toolbar-item creationPanel-toolbar-font" id="toolbarFont">Font</div>
           <input type="button" class="creationPanel-toolbar-item creationPanel-toolbar-color jscolor {onFineChange:'setTextColor(this)'}"
                  id="colorSelector" value="000000" readonly autocomplete="off"></input>
 
@@ -35,10 +36,6 @@
             <div class="creationPanel-toolbar-fontList-item" id="font4" style="font-family:leaguescript">Font</div>
           </div>
         </div>
-
-
-
-
         <div class="creationPanel-skin" id="creationPanelSkin">
           <input type="text" class="creationPanel-skin-tattoo" id="creationPanelTattoo" placeholder="Write here!" maxlength="25"/>
         </div>
@@ -49,10 +46,9 @@
           <button class="creationPanel-displayWork-close" id="displayWorkClose"></button>
         </div> -->
       </div>
-
       <footer>
         <div class="footer-navbar">
-          <div class="footer-navbar-item">About</div>
+          <div class="footer-navbar-item" id="footerAbout">About</div>
           <a class="footer-navbar-item" href="https://www.instagram.com/franklin__hung/" target="_blank">
             <div>Instagram</div>
           </a>
@@ -62,20 +58,41 @@
           <div class="footer-navbar-item">Line</div>
         </div>
       </footer>
+      <!-- About page -->
+      <div class="homePage-about" id="homePageAbout">
+        <div class="homePage-about-top">
+          <h1 class="homePage-about-top-title">FRANKLIN</h1>
+          <div class="homePage-about-top-language" id="changeLan"></div>
+        </div>
+        <!-- English version -->
+        <div class="homePage-about-text-en" id="aboutTextEn">
+          <p class="inner-text homePage-about-text-en-first">
+            FRANKLIN makes people design temporary tattoos with your innovation, imagination and style.
+          </p>
+          <p class="inner-text homePage-about-text-en-second">
+            Our vision is to encourage people to live life confidently and courageously everyday.
+          </p>
+        </div>
+        <!-- Chinese version -->
+        <div class="homePage-about-text-ch" id="aboutTextCh">
+          <p class="inner-text homePage-about-text-ch-first">
+            FRANKLIN激發你的創意與想像，只設計自己想要的紋身貼。
+          </p>
+          <p class="inner-text homePage-about-text-ch-second">
+            FRANKLIN的願景是「傳遞充滿自信及勇氣的生活態度」"
+          </p>
+        </div>
+        <div class="homePage-about-close" id="aboutCloser">
+          <span class="homePage-about-closeBar" style="transform: rotateZ(45deg)"></span>
+          <span class="homePage-about-closeBar" style="transform: rotateZ(-45deg)"></span>
+        </div>
+      </div>
     </div>
     <script>
+      // change text color
       function setTextColor(picker) {
         document.getElementById("creationPanelTattoo").style.color = '#' + picker.toString();
       }
-
-      // var stalemateFont = document.getElementById("stalemateFont");
-      // stalemateFont.addEventListener("click", changeFont);
-
-      // function changeFont() {
-      //   if(stalemateFont.checked == true) {
-      //     document.getElementById("creationPanelTattoo").style.fontFamily = "stalemate";
-      //   }
-      // }
     </script>
     <script src="app/scripts/library/jscolor.min.js"></script>
     <script src="app/scripts/frontend/main.js"></script>
