--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design your Tattoo</title>
-    <!-- <link rel="icon" href="app/view/img/logo.png" type="image/x-icon"> -->
+    <link rel="icon" href="app/images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="app/styles/css/normalize.css"/>
     <link rel="stylesheet" href="app/styles/css/fontStyle.css"/>
     <link rel="stylesheet" href="app/styles/css/main.css"/>
