--- a/index.html
+++ b/index.html
@@ -64,7 +64,18 @@
         <div class="homePage-about-wrap">
           <div class="homePage-about-top">
             <h1 class="homePage-about-top-title">FRANKLIN</h1>
-            <div class="homePage-about-top-language" id="changeLan"></div>
+            <div class="homePage-about-top-option">
+              <div class="homePage-about-top-language" id="changeLan"></div>
+              <div class="homePage-about-close" id="aboutCloser">
+                <span class="homePage-about-closeBar" style="transform: rotateZ(45deg)"></span>
+                <span class="homePage-about-closeBar" style="transform: rotateZ(-45deg)"></span>
+              </div>
+            </div>
+            <!-- <div class="homePage-about-top-language" id="changeLan"></div>
+            <div class="homePage-about-close" id="aboutCloser">
+              <span class="homePage-about-closeBar" style="transform: rotateZ(45deg)"></span>
+              <span class="homePage-about-closeBar" style="transform: rotateZ(-45deg)"></span>
+            </div> -->
           </div>
           <!-- English version -->
           <div class="homePage-about-text-en" id="aboutTextEn">
@@ -83,14 +94,15 @@
                 <ol>
                   <li class="inner-text">choose skin, font, text color and type words</li>
                   <li class="inner-text">take screenshot</li>
-                  <li class="inner-text">sen it to me on social media</li>
+                  <li class="inner-text">sent it to me on social media</li>
                 </ol>
               </p>
-              <p class="inner-text" style="margin-top:10px">
+              <p class="inner-text" style="margin-top:20px">
                 <strong>
-                  width: shorter than 13cm<br>
-                  height: 1.2cm ~ 2cm <br>
-                  size depends on content and font
+                  I make sure the size will be:<br>
+                  Width: shorter than 13cm<br>
+                  Height: 1.2cm ~ 2cm <br>
+                  All depend on your text and font.
                 </strong>
               </p>
             </article>
@@ -117,16 +129,13 @@
               </p>
               <p class="inner-text" style="margin-top:10px">
                 <strong>
+                  尺寸大小介於:<br>
                   寬: 小於13cm<br>
                   高: 1.2cm ~ 2cm <br>
                   內容與字體決定尺寸
                 </strong>
               </p>
             </article>
-          </div>
-          <div class="homePage-about-close" id="aboutCloser">
-            <span class="homePage-about-closeBar" style="transform: rotateZ(45deg)"></span>
-            <span class="homePage-about-closeBar" style="transform: rotateZ(-45deg)"></span>
           </div>
         </div>
       </div>
