--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
           <input type="text" class="creationPanel-skin-tattoo" id="creationPanelTattoo" placeholder="Write here!" maxlength="25" autocomplete="off" spellcheck="false" autocorrect="off"/>
         </div>
         <input type="text" class="creationPanel-letterAmount" id="letterAmount" readonly autocomplete="off" value="25" contenteditable="false"/>
-        <!-- <div class="creationPanel-displayButton" id="displayButton">Take a look</div>
-        <div class="creationPanel-displayWork" id="displayWork">
-          <input type="text" class="creationPanel-displayWork-content" id="displayWorkContent" readonly/>
-          <button class="creationPanel-displayWork-close" id="displayWorkClose"></button>
-        </div> -->
       </div>
       <footer>
         <div class="footer-navbar">
@@ -53,10 +48,10 @@
           <a class="footer-navbar-item" href="https://www.instagram.com/franklin__hung/" target="_blank">
             <div>Instagram</div>
           </a>
-          <a class="footer-navbar-item" href="https://www.facebook.com/messages/t/ChengHungFranklin" target="_blank">
-            <div>Messenger</div>
+          <a class="footer-navbar-item" href="https://www.pinterest.com/franklinhungcom/" target="_blank">
+            <div>Pinterest</div>
           </a>
-          <div class="footer-navbar-item" id="footerLine">Line</div>
+          <div class="footer-navbar-item" id="footerContact">Contact</div>
         </div>
       </footer>
       <!-- About page -->
@@ -71,11 +66,6 @@
                 <span class="homePage-about-closeBar" style="transform: rotateZ(-45deg)"></span>
               </div>
             </div>
-            <!-- <div class="homePage-about-top-language" id="changeLan"></div>
-            <div class="homePage-about-close" id="aboutCloser">
-              <span class="homePage-about-closeBar" style="transform: rotateZ(45deg)"></span>
-              <span class="homePage-about-closeBar" style="transform: rotateZ(-45deg)"></span>
-            </div> -->
           </div>
           <!-- English version -->
           <div class="homePage-about-text-en" id="aboutTextEn">
@@ -85,14 +75,14 @@
                 FRANKLIN makes people design temporary tattoos with your innovation, imagination and style.
               </p>
               <p class="inner-text">
-                Our vision is to encourage people to live life confidently and courageously everyday.
+                <strong>Be Yourself</strong> is our vision.
               </p>
             </article>
             <article class="homePage-about-article" style="margin-top:50px">
               <h2 class="homePage-about-article-title">How it works</h2>
               <p class="inner-text">
                 <ol>
-                  <li class="inner-text">choose skin, font, text color and type words</li>
+                  <li class="inner-text">choose skin, font, word color and type soemthing</li>
                   <li class="inner-text">take screenshot</li>
                   <li class="inner-text">sent it to me on social media</li>
                 </ol>
@@ -102,7 +92,7 @@
                   I make sure the size will be:<br>
                   Width: shorter than 13cm<br>
                   Height: 1.2cm ~ 2cm <br>
-                  All depend on your text and font.
+                  All depend on your text length and font.
                 </strong>
               </p>
             </article>
@@ -115,7 +105,7 @@
                 FRANKLIN激發你的創意與想像，只設計自己想要的紋身貼。
               </p>
               <p class="inner-text">
-                FRANKLIN的願景是「傳遞充滿自信及勇氣的生活態度」
+                FRANKLIN的願景是傳遞「忠於自我」的態度
               </p>
             </article>
             <article class="homePage-about-article" style="margin-top:50px">
@@ -124,7 +114,7 @@
                 <ol>
                   <li class="inner-text">選擇膚色/字型/文字顏色，然後打些字</li>
                   <li class="inner-text">螢幕截圖</li>
-                  <li class="inner-text">將照片傳給我(line/messenger)</li>
+                  <li class="inner-text">將照片傳給我(line/facebook)</li>
                 </ol>
               </p>
               <p class="inner-text" style="margin-top:10px">
@@ -132,10 +122,23 @@
                   尺寸大小介於:<br>
                   寬: 小於13cm<br>
                   高: 1.2cm ~ 2cm <br>
-                  內容與字體決定尺寸
+                  內容長度與字體決定尺寸
                 </strong>
               </p>
             </article>
+          </div>
+        </div>
+      </div>
+      <!-- Contact page -->
+      <div class="homePage-contact" id="homePageContact">
+        <div class="homePage-contact-wrap">
+          <div class="homePage-contact-list">
+            <div class="homePage-contact-list-item" id="contactLine">LINE</div>
+            <a class="homePage-contact-list-item" href="https://www.facebook.com/messages/t/ChengHungFranklin" target="_blank">facebook</a>
+          </div>
+          <div class="homePage-contact-close" id="contactCloser">
+            <span class="homePage-contact-closeBar" style="transform: rotateZ(45deg)"></span>
+            <span class="homePage-contact-closeBar" style="transform: rotateZ(-45deg)"></span>
           </div>
         </div>
       </div>
