--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="creationPanel-skin" id="creationPanelSkin">
-          <input type="text" class="creationPanel-skin-tattoo" id="creationPanelTattoo" placeholder="Write here!" maxlength="25" autocomplete="off" spellcheck="false" autocorrect="off"/>
+          <input type="text" class="creationPanel-skin-tattoo" id="creationPanelTattoo" placeholder="Write here!" maxlength="25" autocomplete="off" spellcheck="false" autocorrect="off" autofocus/>
         </div>
         <input type="text" class="creationPanel-letterAmount" id="letterAmount" readonly autocomplete="off" value="25" contenteditable="false"/>
       </div>
